# CppCommodityStuff

./: .gitignore  Makefile.am  README.md  configure.ac
CSVFile/: .gitignore  CSVFile.cpp  Makefile.am
Hello/: Hello.cpp  Makefile.am
include/: CSVFile.h  Makefile.am
lib/: CSVFile.cpp  Makefile.am
